# anki

./: Cargo.toml  DESIGN.md  config.toml  example.anki  example.flash  internet.md
COVID.deck/: example.flash
COVID.deck/ClozeWithSource/: cloze+back.hbs  config.toml  style.css
COVID.deck/FrontBackSourceContext/: front-back.hbs  style.css
FrontBackSourceContext/: config.toml
src/: change_resolver.rs  change_router.rs  crowd-anki.rs  crowd_anki.rs  deck.rs  deck_locator.rs  error.rs  intermediate.rs  lib.rs  main.rs  model_loader.rs  parse.rs  uuid_generator.rs  uuid_resolver.rs
src/ClozeWithSource/: cloze.hbs  config.toml
src/FrontBackSourceContext/: back-front.hbs  config.toml
src/types/: config.rs  crowd_anki_config.rs  crowd_anki_models.rs  deck.rs  mod.rs  note.rs  note_methods.rs  parser.rs
src/types/deck/: methods.rs  mod.rs  model.rs
