[package]
name = "oh"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.10.1"
evalexpr = { version = "12.0.2", features = ["serde"] }
fs-err = "3.1.1"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.4"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = ["serde"]
serde = []
