[package]
name = "flash"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.10.1"
evalexpr = { path = "./evalexpr", features = ["serde"]}
fs-err = "3.1.1"
gix = "0.74.1"
ordered-float = { version = "5.1.0", features = ["serde"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "v5"] }

[features]
default = ["serde"]
serde = []
